# crqt-ng

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  README.md  _clang_format.sh  config.h.cmake  personaltypes.py
cmake/modules/: Qt5TranslationToolsMacros.cmake
src/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  addbookmarkdlg.cpp  addbookmarkdlg.h  app-props.h  bookmarklistdlg.cpp  bookmarklistdlg.h  cr3widget.cpp  cr3widget.h  cr3widget_commands.h  crqt.rc  crqtres.qrc  crqtutil.cpp  crqtutil.h  exportprogressdlg.cpp  exportprogressdlg.h  fallbackfontsdialog.cpp  fallbackfontsdialog.h  filepropsdlg.cpp  filepropsdlg.h  fontfamiliesdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewwidget.cpp  previewwidget.h  recentdlg.cpp  recentdlg.h  sampleview.cpp  sampleview.h  searchdlg.cpp  searchdlg.h  settings.cpp  settings.h  settings.ui  tabdata.cpp  tabdata.h  (+11 more)
src/desktop/: Info.plist  Info.plist.cmake  crqt.appdata.xml  crqt.desktop  crqt.xpm
src/i18n/: crqt_bg.ts  crqt_cs.ts  crqt_hu.ts  crqt_nl.ts  crqt_ru.ts  crqt_uk.ts  lang_nl.ts
tools/gentoo/: crqt-ng-x.y.z.ebuild
